# ash-nv-rt

./: Cargo.toml  README.md
shaders/: compile.bat  compile.sh  triangle.bindless.rchit.glsl  triangle.bindless.rchit.hlsl  triangle.glsl_rchit.spv  triangle.glsl_rchit.txt  triangle.hlsl_bindless_rchit.dxil  triangle.hlsl_lib.spv  triangle.hlsl_lib.txt  triangle.hlsl_rmiss.txt  triangle.lib.hlsl  triangle.rchit.glsl  triangle.rgen.glsl  triangle.rgen.hlsl  triangle.rmiss.glsl
shaders/compiled/: triangle.glsl_bindless_rchit.spv  triangle.glsl_bindless_rchit.txt  triangle.glsl_rchit.txt  triangle.glsl_rgen.spv  triangle.glsl_rgen.txt  triangle.glsl_rmiss.spv  triangle.glsl_rmiss.txt  triangle.hlsl_bindless_rchit.dxil  triangle.hlsl_bindless_rchit.spv  triangle.hlsl_bindless_rchit.txt  triangle.hlsl_lib.dxil  triangle.hlsl_lib.txt  triangle.hlsl_rchit.dxil  triangle.hlsl_rchit.spv  triangle.hlsl_rchit.txt  triangle.hlsl_rgen.dxil  triangle.hlsl_rgen.spv  triangle.hlsl_rgen.txt  triangle.hlsl_rmiss.dxil  triangle.hlsl_rmiss.spv  triangle.hlsl_rmiss.txt
src/: main.rs
